<resources>
    <string name="app_name" translatable="false">Rekado</string>
    <string name="navigation_payloads">Payloads</string>
    <string name="navigation_tools">Tools</string>
    <string name="navigation_instructions">Instructions</string>
    <string name="navigation_logs">Logs</string>
    <string name="navigation_about">About Rekado</string>
    <string name="navigation_donate">Support development</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_serial_checker">Serial checker</string>
    <string name="navigation_translators">Translators</string>
    <string name="about_category_description">Description</string>
    <string name="about_category_developer">Developer</string>
    <string name="about_information_description">Rekado is a toolkit app for your Nintendo Switch that includes payloads injection and checking consoles for vulnerability by serial number</string>
    <string name="about_developer_portfolio_title">Portfolio</string>
    <string name="about_developer_portfolio_summary">All information about the developer and the blog with news</string>
    <string name="about_developer_instagram_title" translatable="false">Instagram</string>
    <string name="about_developer_instagram_summary">Hobby profile with drone photo</string>
    <string name="about_developer_github_title" translatable="false">GitHub</string>
    <string name="about_developer_github_summary">List of the open-source apps</string>
    <string name="about_developer_twitter_title" translatable="false">Twitter</string>
    <string name="about_developer_twitter_summary">Personal micro-blog</string>
    <string name="payloads_download_status_empty">The name or URL should not be empty!</string>
    <string name="payloads_download_status_success">The payload successfully downloaded!</string>
    <string name="payloads_download_status_error">An error occurred during downloading payload. Check your internet connection or typos in the URL.</string>
    <string name="tools_serial_checker_title">Serial checker</string>
    <string name="tools_serial_checker_description">Check if your Nintendo Switch is vulnerable using your unit\'s serial number</string>
    <string name="instructions_category_cable">Cable</string>
    <string name="instructions_category_cable_description">First, you need to find a cable to connect your device to the Nintendo Switch. For proper work, this should be a cable that is designed for data transmission, not just for charging.\n\nIt is advisable to use an A-to-C cable and a USB OTG adapter.</string>
    <string name="instructions_category_payload">Payload</string>
    <string name="instructions_category_payload_description">You can add your payload from the device’s memory (click the \u0022+\u0022 button), download it via a direct link (click the button with the \u0022cloud\u0022 icon) on the \u0022Payloads\u0022 screen or simply move it to the Rekado folder (/sdcard/Android/data/com.pavelrekun.rekado/files/).\n\nYou can also use one of the bundled payloads (SX Loader/Hekate/Fusee Primary/ReiNX).</string>
    <string name="instructions_category_rcm" translatable="false">RCM</string>
    <string name="instructions_category_rcm_description">Enter your Nintendo Switch into RCM mode in any convenient way. \n\nYour Nintendo Switch will power on by itself when plugged in, be sure to hold \u0022VOLUME +\u0022.</string>
    <string name="instructions_category_final">Final</string>
    <string name="instructions_category_final_description">Connect the device to the Nintendo Switch and allow permission for the USB access, if necessary. Wait unit payloads chooser dialog will be opened and select which one you want to load.</string>
    <string name="donate_description">You can support the app developer by buying him a cup of coffee. If you want, of course.</string>
    <string name="settings_category_auto_injector">Auto-injector</string>
    <string name="settings_auto_injector_status_title_disabled">Enable \u0022Auto-injector\u0022</string>
    <string name="settings_auto_injector_status_title_enabled">Disable \u0022Auto-injector\u0022</string>
    <string name="settings_auto_injector_payload_title">Payload</string>
    <string name="settings_category_payloads">Payloads</string>
    <string name="settings_payloads_hide_title">Hide bundled payloads</string>
    <string name="settings_payloads_hide_summary">Hide all bundled payloads (SX Loader/Hekate/Fusee Primary/ReiNX)</string>
    <string name="settings_payloads_reset_title">Clear</string>
    <string name="settings_payloads_reset_summary">Remove all added payloads except bundled (SX Loader/Hekate/Fusee Primary/ReiNX)</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_appearance_theme_title">Theme</string>
    <string name="settings_appearance_theme_summary">Main theme of the app</string>
    <string name="settings_appearance_accent_color_title">Accent color</string>
    <string name="settings_appearance_accent_color_summary">Color used to tint UI elements</string>
    <string name="settings_appearance_randomize_title">Randomize appearance</string>
    <string name="settings_appearance_randomize_summary">Set a theme and color at random</string>
    <string name="settings_appearance_reset_title">Reset</string>
    <string name="settings_appearance_reset_summary">Reset appearance settings to default</string>
    <string name="settings_picker_color_title">Choose color</string>
    <string name="settings_picker_color_button_close">Close</string>
    <string name="settings_picker_theme_title">Choose theme</string>
    <string name="settings_picker_theme_category_control">Control</string>
    <string name="settings_picker_theme_control_manual">Manual</string>
    <string name="settings_picker_theme_control_system_default">System default</string>
    <string name="settings_picker_theme_control_battery_saver">Set by "Battery Saver"</string>
    <string name="settings_picker_theme_themes_general_white">White</string>
    <string name="settings_picker_theme_themes_general_dark">Dark</string>
    <string name="settings_picker_theme_themes_general_sepia">Sepia</string>
    <string name="settings_picker_theme_themes_general_black">Black</string>
    <string name="settings_picker_theme_themes_general_rose">Rose</string>
    <string name="settings_picker_theme_themes_general_serenity">Serenity</string>
    <string name="settings_picker_theme_themes_colorful_olive">Olive</string>
    <string name="settings_picker_theme_themes_colorful_jungle">Jungle</string>
    <string name="settings_picker_theme_themes_colorful_pepper">Pepper</string>
    <string name="settings_picker_theme_themes_colorful_ocean">Ocean</string>
    <string name="settings_picker_theme_themes_colorful_electricity">Electricity</string>
    <string name="settings_picker_theme_themes_colorful_steel">Steel</string>
    <string name="settings_utils_restart_dialog_title">Settings changed</string>
    <string name="settings_utils_restart_dialog_message">Settings have been changed. Please, restart the app for the change to take effect.\n\nRestart the app now?</string>
    <string name="settings_utils_restart_dialog_action_restart">Restart</string>
    <string name="settings_utils_restart_dialog_action_cancel">Cancel</string>
    <string name="dialog_loader_title">Choose payload</string>
    <string name="dialog_reset_payloads_title">Clear</string>
    <string name="dialog_reset_payloads_summary">Are you sure you want to delete payloads?</string>
    <string name="dialog_file_chooser_payload_title">Choose payload</string>
    <string name="dialog_payload_download_title">Download</string>
    <string name="dialog_payload_download_name">Name</string>
    <string name="dialog_payload_download_url" translatable="false">URL</string>
    <string name="dialog_payload_download_button">Download</string>
    <string name="dialog_payload_update_title">Payloads updates</string>
    <string name="dialog_payload_update_message">There is an update for some bundled payloads. The update is recommended.</string>
    <string name="dialog_loader_no_payloads_title">No payloads</string>
    <string name="dialog_loader_no_payloads_description">It seems you did not add external payloads and hid the bundled ones. The injection is not possible.\n\nAdd your payloads or disable the hiding of bundled payloads in the "Settings" and try again.</string>
    <string name="dialog_button_update">Update payloads</string>
    <string name="dialog_button_positive" translatable="false">OK</string>
    <string name="dialog_button_negative">Close</string>
    <string name="serial_checker_category_checker">Checker</string>
    <string name="serial_checker_category_information">Information</string>
    <string name="serial_checker_checker_serial_number">Serial number</string>
    <string name="serial_checker_checker_button">Check</string>
    <string name="serial_checker_information_xaw1">Serials beginning with XAW1\nXAW10000000000 - XAW10074000000: Not patched\nXAW10075000000 - XAW10120000000: Possibly patched\nXAW10120000000 and higher: Patched\n\n</string>
    <string name="serial_checker_information_xaw4">Serials beginning with XAW4\nXAW40000000000 - XAW40011000000: Not patched\nXAW40011000000 - XAW40012000000: Possibly patched\nXAW40012000000 and higher: Patched\n\n</string>
    <string name="serial_checker_information_xaw7">Serials beginning with XAW7\nXAW70000000000 - XAW70017800000: Not patched\nXAW70017800000 - XAW70030000000: Possibly patched\nXAW70030000000 and higher: Patched\n\n</string>
    <string name="serial_checker_information_xaj1">Serials beginning with XAJ1\nXAJ10000000000 - XAJ10020000000: Not patched\nXAJ10020000000 - XAJ10030000000: Possibly patched\nXAJ10030000000 and higher: Patched\n\n</string>
    <string name="serial_checker_information_xaj4">Serials beginning with XAJ4\nXAJ40000000000 - XAJ40046000000: Not patched\nXAJ40046000000 - XAJ40060000000: Possibly patched\nXAJ40060000000 and higher: Patched\n\n</string>
    <string name="serial_checker_information_xaj7">Serials beginning with XAJ7\nXAJ70000000000 - XAJ70040000000: Not patched\nXAJ70040000000 - XAJ70050000000: Possibly patched\nXAJ70050000000 and higher: Patched\n\n</string>
    <string name="serial_checker_information_xaw9">Serials beginning with XAW9\nRefurbished units directly from Nintendo, no information, but very possible all of them are patched.\n\n</string>
    <string name="serial_checker_information_xak">Serials beginning with XAK\nNo information available, since those are only sold in Korea.</string>
    <string name="serial_checker_status_not_patched">Not patched</string>
    <string name="serial_checker_status_patched">Patched</string>
    <string name="serial_checker_status_possibly_patched">Possibly patched</string>
    <string name="serial_checker_status_error">Can\'t check this serial number!</string>
    <string name="serial_checker_status_empty">Serial number can\'t be empty!</string>
    <string name="serial_checker_status_too_long">Maximum length of the serial number is 14 characters!</string>
    <string name="serial_checker_status_scan_failed">Failed to scan barcode!</string>
    <string name="translators_english" translatable="false">Pavel Rekun (Menos)</string>
    <string name="translators_russian" translatable="false">Pavel Rekun (Menos)</string>
    <string name="translators_ukrainian" translatable="false">Pavel Rekun (Menos)</string>
    <string name="translators_spanish" translatable="false">tiliarou, marioandraderomero, elric200x, zjairo45</string>
    <string name="helper_error_adding_payload">Selected payload can not be added!</string>
</resources>