<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_category_auto_injector" />

    <CheckBoxPreference
        android:key="auto_injector_enable"
        android:title="@string/settings_auto_injector_status_title_disabled" />

    <ListPreference
        android:enabled="false"
        android:key="auto_injector_payload"
        android:summary="%s"
        android:title="@string/settings_auto_injector_payload_title" />

    <PreferenceCategory android:title="@string/settings_category_payloads" />

    <Preference
        android:key="payloads_reset"
        android:summary="@string/settings_payloads_reset_summary"
        android:title="@string/settings_payloads_reset_title" />

</PreferenceScreen>