<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorBackgroundSecondary"
            android:elevation="3dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/instructions_category_cable"
                android:textColor="?attr/colorAccent"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/instructions_category_cable_description"
                android:textColor="?android:attr/textColorPrimary"
                tools:textColor="?android:attr/textColorPrimaryInverse" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorBackgroundSecondary"
            android:elevation="3dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/instructions_category_payload"
                android:textColor="?attr/colorAccent"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/instructions_category_payload_description"
                android:textColor="?android:attr/textColorPrimary"
                tools:textColor="?android:attr/textColorPrimaryInverse" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorBackgroundSecondary"
            android:elevation="3dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/instructions_category_rcm"
                    android:textColor="?attr/colorAccent"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/instructionsRCMHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="0"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@null"
                    android:focusable="true"
                    android:src="@drawable/ic_help" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/instructions_category_rcm_description"
                android:textColor="?android:attr/textColorPrimary"
                tools:textColor="?android:attr/textColorPrimaryInverse" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorBackgroundSecondary"
            android:elevation="3dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/instructions_category_final"
                android:textColor="?attr/colorAccent"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/instructions_category_final_description"
                android:textColor="?android:attr/textColorPrimary"
                tools:textColor="?android:attr/textColorPrimaryInverse" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>