<?xml version="1.0" encoding="utf-8"?>
<com.pavelrekun.penza.widgets.ElevationScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/instructionsLayoutScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Card.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/Widget.Text.Gilroy.Subtitle.Padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions_category_cable" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/instructions_category_cable_description"
                    android:textColor="?android:attr/textColorPrimary" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Card.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/Widget.Text.Gilroy.Subtitle.Padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions_category_payload" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/instructions_category_payload_description"
                    android:textColor="?android:attr/textColorPrimary" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Card.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Widget.Text.Gilroy.Subtitle.Padding"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/instructions_category_rcm" />

                    <ImageView
                        android:id="@+id/instructionsRCMHelp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_weight="0"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:contentDescription="@null"
                        android:focusable="true"
                        android:padding="16dp"
                        android:src="@drawable/ic_information_help" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/instructions_category_rcm_description"
                    android:textColor="?android:attr/textColorPrimary" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Card.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/Widget.Text.Gilroy.Subtitle.Padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions_category_final" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/instructions_category_final_description"
                    android:textColor="?android:attr/textColorPrimary" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</com.pavelrekun.penza.widgets.ElevationScrollView>
